# DASHBOARD

./: CMakeLists.txt
client/desktop/: main.cpp
client/desktop/include/: canvas.h  comservice.h  uartservice.h  window.h
client/desktop/src/: canvas.cpp  comservice.cpp  tcpservice.cpp  uartservice.cpp  window.cpp
client/esp32/: platformio.ini
client/esp32/src/: main.cpp
server/desktop/: main.cpp
server/desktop/include/: comservice.h  tcpservice.h  window.h
server/desktop/src/: comservice.cpp  tcpservice.cpp  uartservice.cpp  window.cpp
server/esp32/src/: main.cpp
shared/: setting.h
